# WhatAFoc

common/: Cargo.toml
common/src/: lib.rs  types.rs
embedded/: Cargo.toml
embedded/src/: calibrated_encoder.rs  controller.rs  encoder.rs  lpf.rs  main.rs  motor.rs  pid.rs  pll.rs  stepper_motor.rs  tle5012b.rs  utils.rs
ui/: Cargo.toml
ui/src/: main.rs  uart.rs  usb.rs
ui/ui/: main.slint
