[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
embedded = ["postcard/embedded-io"]
default = ["postcard/use-std"]

[dependencies]
defmt = "0.3.6"
fixed = { version = "1.26.0", features = ["serde"] }
postcard = { version = "1.0.8", default-features = false }
serde = { version = "1.0.197", features = ["derive"], default-features = false }
