[package]
name = "serde_test"
version = "0.1.0"
edition = "2021"
build = "build.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fixed = { version = "1.26.0", features = ["serde", "std"] }
rusb = "0.9.3"
slint = "1.5.0"
thiserror = "1.0.58"
tokio = { version = "1.36.0", features = ["macros", "rt", "io-util", "sync", "time", "rt-multi-thread"] }
tokio-serial = "5.4.4"
tokio-util = "0.7.10"

common = { path = "../common"}
plotters = "0.3.5"
ringbuffer = "0.15.0"

[build-dependencies]
slint-build = "1.4"
